--- a/Project/Project3/Project3.tex
+++ b/Project/Project3/Project3.tex
@@ -91,7 +91,7 @@ typedef struct {
 
     \code{src/QuickSort.java}{java}
 
-    \includegraphics[width=0.9\textwidth]{quicksort.png}
+    \includegraphics[width=0.9\textwidth]{mergesort.png}
 
     \code{src/MergeSort.java}{java}
 
