Update HW fault

--- a/Homework/HW01/HW01.tex
+++ b/Homework/HW01/HW01.tex
@@ -55,7 +55,7 @@
         \item Access I/O device.
     \end{enumerate}
 
-    \ans 修改计时器时间(a.)、清理内存(c.)、关闭中断(e.)、修改设备状态表信息(f.)。
+    \ans 修改计时器时间(a.)、清理内存(c.)、关闭中断(e.)、修改设备状态表信息(f.)、\textbf{获取设备信息(h.)}。
     \item[1.10] Give two reasons why caches are useful.What problems do they solve?
     What problems do they cause? If a cache can be made as large as the device for which it is caching (for instance, a cache as large as a disk),
     why not make it that large and eliminate the device?
