--- a/Homework/HW04/HW04.tex
+++ b/Homework/HW04/HW04.tex
@@ -113,7 +113,7 @@
         \item Stack memory
     \end{enumerate}
 
-    \ans 全局变量(c.)。每个线程都有自己的寄存器与堆栈。
+    \ans \textbf{堆内存(b.)}和全局变量(c.)。每个线程都有自己的寄存器与栈。
     \item[4.17] Consider the following code segment:
     \begin{code}{cpp}
 pid_t pid;
