--- a/Project/Project5/Project5.tex
+++ b/Project/Project5/Project5.tex
@@ -58,7 +58,7 @@
 
 \begin{document}
 \title{\normalsize \underline{操作系统(D)}\\\LARGE 项目 5}
-\author{李子龙 518070910095}
+\author{Log Creative }
 \date{\today}
 \maketitle
 
