--- a/Project/Project1/Project1.tex
+++ b/Project/Project1/Project1.tex
@@ -52,7 +52,7 @@
 
 \begin{document}
 \title{\normalsize \underline{操作系统(D)}\\\LARGE 项目 1}
-\author{李子龙 518070910095}
+\author{Log Creative }
 \date{\today}
 \maketitle
 
