--- a/Project/Project2/Project2.tex
+++ b/Project/Project2/Project2.tex
@@ -56,7 +56,7 @@
 
 \begin{document}
 \title{\normalsize \underline{操作系统(D)}\\\LARGE 项目 2}
-\author{李子龙 518070910095}
+\author{Log Creative }
 \date{\today}
 \maketitle
 
