--- a/Project/Project4/Project4.tex
+++ b/Project/Project4/Project4.tex
@@ -57,7 +57,7 @@
 
 \begin{document}
 \title{\normalsize \underline{操作系统(D)}\\\LARGE 项目 4}
-\author{李子龙 518070910095}
+\author{Log Creative }
 \date{\today}
 \maketitle
 
