--- a/Project/Project7/Project7.tex
+++ b/Project/Project7/Project7.tex
@@ -59,7 +59,7 @@
 
 \begin{document}
 \title{\normalsize \underline{操作系统(D)}\\\LARGE 项目 7}
-\author{李子龙 518070910095}
+\author{Log Creative }
 \date{\today}
 \maketitle
 
